btter fix for custom padding and alignment conflict

--- a/src/blocks/rowlayout/style.scss
+++ b/src/blocks/rowlayout/style.scss
@@ -25,7 +25,7 @@
 	padding-left: var(--global-content-edge-padding, 15px);
 	padding-right: var(--global-content-edge-padding, 15px);
 }
-.alignfull > .kt-row-layout-inner > .kt-row-column-wrap, .alignfull.kb-row-layout-wrap > .kt-row-column-wrap {
+.alignfull > .kt-row-layout-inner > .kt-row-column-wrap, .alignfull > .kt-row-column-wrap {
 	padding-left: var(--global-content-edge-padding, 15px);
 	padding-right: var(--global-content-edge-padding, 15px);
 }
